--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Alvita</title>
+    <title>Portofolio Alvita</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Web Icon -->
@@ -24,10 +24,10 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link active">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="skills.html" class="nav-link">Skills</a>
@@ -51,17 +51,17 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-container">
-            <div class="hero-content">
-                <img src="img/fotoal.jpg" alt="Profile Photo" class="profile-photo">
-                <h1>Alvita Najwa Zahrotun Nashiha</h1>
-                <h2>Web Developer & Sysadmin</h2>
-                <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
-                <div class="hero-btns">
-                    <a href="https://drive.google.com/file/d/1g-jJEMqWCdD7cY30USaUOLzFIJmWgEgf/view?usp=sharing" class="btn" download>Download CV</a>
-                    <a href="#projects" class="btn btn-outline">View Projects</a>
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <div class="about-content">
+                <div class="about-img">
+                    <img src="img/fotoal.jpg" alt="About Photo">
+                </div>
+                <div class="about-text">
+                    <h3>Hello, I'm Alvita Najwa</h3>
+                    <p>Saya siswi SMK Negeri 1 Nglegok jurusan Teknik Komputer dan Jaringan (TKJ). Saya aktif di ekstrakurikuler Komunitas IT yang mengasah kemampuan dan pengalaman saya di bidang teknologi.</p>
+                    <p>Minat utama saya adalah Pemrograman Web dan System Administrator, dua bidang yang ingin terus saya kembangkan. Saya bercita-cita menjadi seorang pengembang web profesional yang kreatif dan inovatif, mampu menciptakan solusi digital yang bermanfaat bagi banyak orang.</p>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <a href="index.html">Portfolio</a>
+                    <a href="#home">Portfolio</a>
                 </div>
                 <div class="footer-social">
                     <a href="https://github.com/alvita-najwa"><i class="fab fa-github"></i></a>
@@ -88,7 +88,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script src="js/script.js"></script>
 </body>
 </html>
