--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="img/fotoal.jpg" alt="profile">
+                    <img src="img/fotoal.jpg.jpeg" alt="profile">
                     <a href="index.html">Alvita Najwa</a>
                 </div>
                 <ul class="nav-menu">
@@ -56,7 +56,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="img/fotoal.jpg" alt="About Photo">
+                    <img src="img/fotoal.jpg.jpeg" alt="About Photo">
                 </div>
                 <div class="about-text">
                     <h3>Hello, I'm Alvita Najwa</h3>
