--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="img/fotoal.jpg" alt="profile">
-                    <a href="index.html">Alvita Najwa</a>
+                    <img src="img/fotoal.jpg.jpeg" alt="profile">
+                    <a href="index.html">Alvita <span>Najwa</span></a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -56,8 +56,8 @@
         <div class="hero-container">
             <div class="hero-content">
                 <img src="img/fotoal.jpg" alt="Profile Photo" class="profile-photo">
-                <h1>Alvita Najwa Zahrotun Nashiha</h1>
-                <h2>Web Developer & Sysadmin</h2>
+                <h2>Alvita Najwa Zahrotun Nashiha</h2>
+                <h3>Web Developer & Sysadmin</h3>
                 <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
                 <div class="hero-btns">
                     <a href="https://drive.google.com/file/d/1g-jJEMqWCdD7cY30USaUOLzFIJmWgEgf/view?usp=sharing" class="btn" download>Download CV</a>
