--- a/certificates.html
+++ b/certificates.html
@@ -127,5 +127,7 @@
             </div>
         </div>
     </footer>
+    <!-- Script -->
+    <script src="js/script.js"></script>
 </body>
 </html>
