--- a/projects.html
+++ b/projects.html
@@ -89,9 +89,8 @@
                 <div class="project-card">
                     <div class="project-info">
                         <h3>MOP GitLab Ubuntu (2025)</h3>
-                        <p>Setup GitLab di Ubuntu dengan CI/CD, manajemen repository, dan pengaturan akses proyek kolaboratif.</p>
+                        <p>Setup GitLab di Ubuntu, Manajemen Repository, dan Konfigurasi SMTP Gmail</p>
                         <div class="project-links">
-                            <a href="#" class="btn">Lihat Modul</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +100,6 @@
                         <h3>Python Web AWS + RDS (2025)</h3>
                         <p>Deploy dan konfigurasi aplikasi Python di AWS EC2 dengan MySQL RDS.</p>
                         <div class="project-links">
-                            <a href="#" class="btn">Lihat Tampilan</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +109,6 @@
                         <h3>Kalkulator Python (2025)</h3>
                         <p>Program kalkulator sederhana berbasis CLI menggunakan Python untuk operasi aritmatika dasar.</p>
                         <div class="project-links">
-                            <a href="#" class="btn">Lihat Tampilan</a>
                         </div>
                     </div>
                 </div>
