--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <a href="#home">Portfolio</a>
+                    <a href="#home">Alvita’s Portfolio</a>
                 </div>
                 <div class="footer-social">
                     <a href="https://github.com/alvita-najwa"><i class="fab fa-github"></i></a>
@@ -126,7 +126,7 @@
                     <a href="https://www.youtube.com/@Alvita_Najwa"><i class="fab fa-youtube"></i></a>
                 </div>
                 <div class="footer-info">
-                    <p>&copy; 2023 My Portfolio. All Rights Reserved.</p>
+                    <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
