--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
                 <div class="hero-btns">
                     <a href="https://drive.google.com/file/d/1g-jJEMqWCdD7cY30USaUOLzFIJmWgEgf/view?usp=sharing" class="btn" download>Download CV</a>
-                    <a href="#projects" class="btn btn-outline">View Projects</a>
+                    <a href="#contact" class="btn btn-outline">Contact Me</a>
                 </div>
             </div>
         </div>
