--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                 <div class="project-card">
                     <div class="project-info">
                         <h3>Modul CCNA (2025)</h3>
-                        <p>Panduan dan Materi Latihan Konfigurasi Jaringan Mengacu pada Standar Cisco Certified Network Associate (CCNA). Disusun untuk melatih kemampuan konfigurasi jaringan sesuai standar Cisco.</p>
+                        <p>Panduan konfigurasi jaringan berbasis standar Cisco Certified Network Associate (CCNA), mencakup konsep dasar dan praktik konfigurasi perangkat jaringan.</p>
                         <div class="project-links">
                             <a href="https://drive.google.com/file/d/1G47J0DhRYtDvznES8NwB5yOl4610b-zv/view?usp=sharing" class="btn">Lihat Modul</a>
                         </div>
