--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                 <div class="project-card">
                     <div class="project-info">
                         <h3>Modul CCNA (2025)</h3>
-                        <p>Panduan pembelajaran dan konfigurasi jaringan berbasis Cisco Certified Network Associate yang disusun secara terstruktur, mudah dipahami, dan sesuai untuk siswa SMK.</p>
+                        <p>Menyusun modul pembelajaran Cisco Certified Network Associate yang terstruktur dan mudah dipahami untuk siswa SMK.</p>
                         <div class="project-links">
                             <a href="https://drive.google.com/file/d/1G47J0DhRYtDvznES8NwB5yOl4610b-zv/view?usp=sharing" class="btn">Lihat Modul</a>
                         </div>
