--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="img/fotoal.jpg.jpeg" alt="profile">
+                    <img src="img/alvita.jpeg" alt="profile">
                     <a href="index.html">Alvita Najwa</a>
                 </div>
                 <ul class="nav-menu">
