--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="img/alvita.jpeg" alt="profile">
-                    <a href="index.html">Alvita Najwa</a>
+                    <a href="index.html">Alvita <span>Najwa</span></a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
