--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="img/fotoal.jpg" alt="profile">
-                    <a href="index.html">Alvita Najwa</a>
+                    <img src="img/alvita.jpeg" alt="profile">
+                    <a href="index.html">Alvita <span>Najwa</span></a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
