--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h3>Web Developer & Sysadmin</h3>
                 <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
                 <div class="hero-btns">
-                    <a href="https://drive.google.com/file/d/1LAPI0t43dUfwyMnKr6getsyPp6yo8X6S/view?usp=sharing" download>Download CV</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1LAPI0t43dUfwyMnKr6getsyPp6yo8X6S" download>Download CV</a>
                     <a href="contact.html" class="btn btn-outline">Contact Me</a>
                 </div>
             </div>
