--- a/about.html
+++ b/about.html
@@ -57,6 +57,11 @@
             <div class="about-content">
                 <div class="about-img">
                     <img src="img/fotoal.jpg.jpeg" alt="About Photo">
+                    <div class="side-photos">
+                        <img src="foto1.jpeg" alt="alvita1">
+                        <img src="foto2.jpeg" alt="alvita2">
+                        <img src="foto3.jpeg" alt="alvita3">
+                    </div>
                 </div>
                 <div class="about-text">
                     <h3>Hello, I'm Alvita Najwa</h3>
