--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
                 <div class="about-img">
                     <img src="img/fotoal.jpg.jpeg" alt="About Photo">
                     <div class="side-photos">
-                        <img src="foto1.jpeg" alt="alvita1">
-                        <img src="foto2.jpeg" alt="alvita2">
-                        <img src="foto1.jpeg" alt="alvita3">
+                        <img src="img/foto1.jpeg" alt="alvita1">
+                        <img src="img/foto2.jpeg" alt="alvita2">
+                        <img src="img/foto1.jpeg" alt="alvita3">
                     </div>
                 </div>
                 <div class="about-text">
