--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 </div>
             </div>
         </nav>
+        <!-- 🌙 Tombol Dark/Light Mode -->
+    <button id="theme-toggle" class="theme-toggle">🌙</button>
     </header>
 
     <!-- Hero Section -->
