--- a/about.html
+++ b/about.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Rumah</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link active">About</a>
+                        <a href="about.html" class="nav-link active">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="skills.html" class="nav-link">Kemampuan</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Projects</a>
+                        <a href="projects.html" class="nav-link">Proyek</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link">Certificates</a>
+                        <a href="certificates.html" class="nav-link">Sertifikat</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Kontak</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -53,7 +53,7 @@
 
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
+            <h2 class="section-title">Tentang Saya</h2>
             <div class="about-content">
                 <div class="about-img">
                     <img src="img/fotoal.jpg.jpeg" alt="About Photo">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="about-text">
-                    <h3>Hello, I'm Alvita Najwa</h3>
+                    <h3>Hallo, Saya Alvita Najwa</h3>
                     <p>Saya siswi SMK Negeri 1 Nglegok jurusan Teknik Komputer dan Jaringan (TKJ). Saya aktif di ekstrakurikuler Komunitas IT yang mengasah kemampuan dan pengalaman saya di bidang teknologi.</p>
                     <p>Minat utama saya adalah Pemrograman Web dan System Administrator, dua bidang yang ingin terus saya kembangkan. Saya bercita-cita menjadi seorang pengembang web profesional yang kreatif dan inovatif, mampu menciptakan solusi digital yang bermanfaat bagi banyak orang.</p>
                 </div>
