--- a/certificates.html
+++ b/certificates.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Rumah</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="skills.html" class="nav-link">Kemampuan</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Projects</a>
+                        <a href="projects.html" class="nav-link">Proyek</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link active">Certificates</a>
+                        <a href="certificates.html" class="nav-link active">Sertifikat</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Kontak</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -54,7 +54,7 @@
     <!-- Certificates Section -->
     <section id="certificates" class="certificates">
         <div class="container">
-            <h2 class="section-title">My Certificates</h2>
+            <h2 class="section-title">Sertifikat Saya</h2>
             <div class="certificate-filter">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="Aguna Course">Aguna Course</button>
