--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active">Home</a>
+                        <a href="index.html" class="nav-link active">Rumah</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="skills.html" class="nav-link">Kemampuan</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Projects</a>
+                        <a href="projects.html" class="nav-link">Proyek</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link">Certificates</a>
+                        <a href="certificates.html" class="nav-link">Sertifikat</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Kontak</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -58,10 +58,10 @@
                 <img src="img/fotoal.jpg" alt="Profile Photo" class="profile-photo">
                 <h2>Alvita Najwa Zahrotun Nashiha</h2>
                 <h3>Web Developer & Sysadmin</h3>
-                <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
+                <p>Selamat datang di portofolio saya! Saya bersemangat belajar dan berinovasi di dunia teknologi.</p>
                 <div class="hero-btns">
-                    <a href="https://drive.google.com/file/d/1LAPI0t43dUfwyMnKr6getsyPp6yo8X6S/view?usp=sharing" class="btn" download>Download CV</a>
-                    <a href="contact.html" class="btn btn-outline">Contact Me</a>
+                    <a href="https://drive.google.com/file/d/1LAPI0t43dUfwyMnKr6getsyPp6yo8X6S/view?usp=sharing" class="btn" download>Unduh CV</a>
+                    <a href="contact.html" class="btn btn-outline">Hubungi Saya</a>
                 </div>
             </div>
         </div>
