--- a/projects.html
+++ b/projects.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Rumah</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">Tentang</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="skills.html" class="nav-link">Kemampuan</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link active">Projects</a>
+                        <a href="projects.html" class="nav-link active">Proyek</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link">Certificates</a>
+                        <a href="certificates.html" class="nav-link">Sertifikat</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Kontak</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -54,7 +54,7 @@
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">My Projects</h2>
+            <h2 class="section-title">Proyek Saya</h2>
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-info">
