--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             <h2 class="section-title">Kontak Saya</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Say Hello!</h3>
+                    <h3>Ucapkan Hallo!</h3>
                     <p>Punya pertanyaan, ide, atau ingin bekerja sama? Silakan hubungi saya melalui form ini. Saya akan dengan senang hati merespons.</p>
                     <div class="contact-details">
                         <div class="contact-item">
