--- a/contact.html
+++ b/contact.html
@@ -70,14 +70,14 @@
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
-                                <h4>Phone</h4>
+                                <h4>Telepon</h4>
                                 <p>+62 858-5747-8682</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Location</h4>
+                                <h4>Lokasi</h4>
                                 <p>Blitar, Indonesia</p>
                             </div>
                         </div>
