--- a/contact.html
+++ b/contact.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Rumah</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">Tentang</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Kemampuan</a>
+                        <a href="skills.html" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Proyek</a>
+                        <a href="projects.html" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link">Sertifikat</a>
+                        <a href="certificates.html" class="nav-link">Certificates</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link active">Kontak</a>
+                        <a href="contact.html" class="nav-link active">Contact</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -57,7 +57,7 @@
             <h2 class="section-title">Kontak Saya</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Ucapkan Hallo!</h3>
+                    <h3>Say Hello!</h3>
                     <p>Punya pertanyaan, ide, atau ingin bekerja sama? Silakan hubungi saya melalui form ini. Saya akan dengan senang hati merespons.</p>
                     <div class="contact-details">
                         <div class="contact-item">
@@ -70,15 +70,15 @@
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
-                                <h4>Telepon</h4>
+                                <h4>Phone</h4>
                                 <p>+62 858-5747-8682</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <h4>Lokasi</h4>
-                                <p>Blitar, Indonesia</p>
+                                <h4>Location</h4>
+                                <p>Blitar, Jawa Timur Indonesia</p>
                             </div>
                         </div>
                     </div>
