--- a/skills.html
+++ b/skills.html
@@ -24,22 +24,22 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Rumah</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">Tentang</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link active">Kemampuan</a>
+                        <a href="skills.html" class="nav-link active">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Proyek</a>
+                        <a href="projects.html" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="certificates.html" class="nav-link">Sertifikat</a>
+                        <a href="certificates.html" class="nav-link">Certificates</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Kontak</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="nav-toggle">
@@ -54,7 +54,7 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <h2 class="section-title">Kemampuan Saya</h2>
+            <h2 class="section-title">My Skills</h2>
             <div class="skills-content">
                 <div class="skill-category">
                     <h3>Frontend</h3>
