--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="img/fotoal.jpg" alt="Profile Photo" class="profile-photo">
                 <h2>Alvita Najwa Zahrotun Nashiha</h2>
                 <h3>Web Developer & Sysadmin</h3>
-                <p>Selamat datang di portofolio saya! Saya bersemangat belajar dan berinovasi di dunia teknologi.</p>
+                <p>Welcome to my portfolio! Passionate about learning and innovating in the world of technology.</p>
                 <div class="hero-btns">
                     <a href="https://drive.google.com/file/d/1LAPI0t43dUfwyMnKr6getsyPp6yo8X6S/view?usp=sharing" class="btn" download>Download CV</a>
                     <a href="contact.html" class="btn btn-outline">Contact Me</a>
