--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Kontak Saya</h2>
+            <h2 class="section-title">Contact Me</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Say Hello!</h3>
