--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
                     <img src="img/fotoal.jpg.jpeg" alt="About Photo">
                     <div class="side-photos">
                         <img src="img/foto1.jpeg" alt="alvita1" width="150">
-                        <img src="img/foto2.jpeg" alt="alvita2" width="150">
-                        <img src="img/foto1.jpeg" alt="alvita3" width="150">
+                        <img src="img/foto2 (2).jpg" alt="alvita2" width="150">
+                        <img src="img/foto3.jpeg" alt="alvita3" width="150">
                     </div>
                 </div>
                 <div class="about-text">
