--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     <div class="side-photos">
                         <img src="img/foto1.jpeg" alt="alvita1" width="150">
                         <img src="img/foto2 (2).jpg" alt="alvita2" width="150">
-                        <img src="img/foto3.jpeg" alt="alvita3" width="150">
+                        <img src="img/foto3.jpg" alt="alvita3" width="150">
                     </div>
                 </div>
                 <div class="about-text">
