--- a/certificates.html
+++ b/certificates.html
@@ -104,6 +104,33 @@
                 <div class="certificate-item" data-category="CCNA">
                     <img src="img/CCNA-Netacad.jpg">
                 </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/Webinar1.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/Webinar2.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/IDN - Webinar Syadmin.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/IDN - Webinar Network.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/IDN - Webinar Cyber Security .jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/IDN - Bootcamp Network.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/SUHU - Webinar Cyber Security .jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/Ngalup Webinar Sysadmin.jpg">
+                </div>
+                <div class="certificate-item" data-category="Events">
+                    <img src="img/LinkedIn.jpg">
+                </div>
             </div>
         </div>
     </section>
