--- a/certificates.html
+++ b/certificates.html
@@ -62,7 +62,7 @@
                 <button class="filter-btn" data-filter="Always Ngoding">Always Ngoding</button>
                 <button class="filter-btn" data-filter="RedHat">RedHat</button>
                 <button class="filter-btn" data-filter="CCNA">CCNA</button>
-                <button class="filter-btn" data-filter="CCNA">Events</button>
+                <button class="filter-btn" data-filter="Events">Events</button>
             </div>
             <div class="certificate-gallery">
                 <div class="certificate-item" data-category="Aguna Course">
