--- a/certificates.html
+++ b/certificates.html
@@ -123,10 +123,10 @@
                     <img src="img/IDN - Bootcamp Network.jpg">
                 </div>
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/SUHU - Webinar Cyber Security .jpg">
+                    <img src="img/SUHU - Webinar Cyber Security .jpeg">
                 </div>
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/Ngalup Webinar Sysadmin.jpg">
+                    <img src="img/Ngalup Webinar Sysadmin.png">
                 </div>
                 <div class="certificate-item" data-category="Events">
                     <img src="img/LinkedIn.jpg">
