--- a/certificates.html
+++ b/certificates.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Alvita - Certificates</title>
+
+    <!-- CSS Utama -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+
     <!-- Web Icon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <!-- Font Awesome for icons -->
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Lightbox2 CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 </head>
+
 <body>
     <!-- Navigation -->
     <header>
@@ -23,24 +32,12 @@
                     <a href="index.html">Alvita <span>Najwa</span></a>
                 </div>
                 <ul class="nav-menu">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="projects.html" class="nav-link">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="certificates.html" class="nav-link active">Certificates</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="skills.html" class="nav-link">Skills</a></li>
+                    <li><a href="projects.html" class="nav-link">Projects</a></li>
+                    <li><a href="certificates.html" class="nav-link active">Certificates</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
                 <div class="nav-toggle">
                     <span class="bar"></span>
@@ -55,6 +52,7 @@
     <section id="certificates" class="certificates">
         <div class="container">
             <h2 class="section-title">My Certificates</h2>
+
             <div class="certificate-filter">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="Aguna Course">Aguna Course</button>
@@ -64,73 +62,141 @@
                 <button class="filter-btn" data-filter="CCNA">CCNA</button>
                 <button class="filter-btn" data-filter="Events">Events</button>
             </div>
+
             <div class="certificate-gallery">
+
+                <!-- AGUNA COURSE -->
                 <div class="certificate-item" data-category="Aguna Course">
-                    <img src="img/Aguna Course - Network Fundamental .jpg">
+                    <a href="img/Aguna Course - Network Fundamental .jpg" data-lightbox="Aguna" data-title="Network Fundamental - Aguna Course">
+                        <img src="img/Aguna Course - Network Fundamental .jpg" alt="Network Fundamental">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Aguna Course">
-                    <img src="img/Aguna Course - Linux Fundamental.jpg">
+                    <a href="img/Aguna Course - Linux Fundamental.jpg" data-lightbox="Aguna" data-title="Linux Fundamental - Aguna Course">
+                        <img src="img/Aguna Course - Linux Fundamental.jpg" alt="Linux Fundamental">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Aguna Course">
-                    <img src="img/Aguna Course - Python Fundamental .jpg">
+                    <a href="img/Aguna Course - Python Fundamental .jpg" data-lightbox="Aguna" data-title="Python Fundamental - Aguna Course">
+                        <img src="img/Aguna Course - Python Fundamental .jpg" alt="Python Fundamental">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Aguna Course">
-                    <img src="img/Aguna Course - PNETLab.jpg">
+                    <a href="img/Aguna Course - PNETLab.jpg" data-lightbox="Aguna" data-title="Simulasi Jaringan dengan PNETLab - Aguna Course">
+                        <img src="img/Aguna Course - PNETLab.jpg" alt="PNETLab">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Aguna Course">
-                    <img src="img/Aguna Course - Virtual Machine Fundamental .jpg">
+                    <a href="img/Aguna Course - Virtual Machine Fundamental .jpg" data-lightbox="Aguna" data-title="Virtual Machine Fundamental - Aguna Course">
+                        <img src="img/Aguna Course - Virtual Machine Fundamental .jpg" alt="Virtual Machine">
+                    </a>
+                </div>
+
+                <!-- FORTINET -->
+                <div class="certificate-item" data-category="Fortinet">
+                    <a href="img/Fortinet - Getting Started in Cybersecurity - Fortinet.jpg" data-lightbox="Fortinet" data-title="Getting Started in Cybersecurity - Fortinet">
+                        <img src="img/Fortinet - Getting Started in Cybersecurity - Fortinet.jpg" alt="Fortinet Cybersecurity">
+                    </a>
                 </div>
 
                 <div class="certificate-item" data-category="Fortinet">
-                    <img src="img/Fortinet - Getting Started in Cybersecurity - Fortinet.jpg">
+                    <a href="img/Fortinet - Introduction to the Landscape - Fortinet.jpg" data-lightbox="Fortinet" data-title="Introduction to the Threat Landscape - Fortinet">
+                        <img src="img/Fortinet - Introduction to the Landscape - Fortinet.jpg" alt="Fortinet Threat Landscape">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Fortinet">
-                    <img src="img/Fortinet - Introduction to the Landscape - Fortinet.jpg">
+                    <a href="img/Fortinet - Technical Introduction to Cybersecurity.jpg" data-lightbox="Fortinet" data-title="Technical Introduction to Cybersecurity - Fortinet">
+                        <img src="img/Fortinet - Technical Introduction to Cybersecurity.jpg" alt="Fortinet Technical Cybersecurity">
+                    </a>
                 </div>
-                <div class="certificate-item" data-category="Fortinet">
-                    <img src="img/Fortinet - Technical Introduction to Cybersecurity.jpg">
+
+                <!-- ALWAYS NGODING -->
+                <div class="certificate-item" data-category="Always Ngoding">
+                    <a href="img/HTML - Always Ngoding.jpg" data-lightbox="Ngoding" data-title="HTML - Always Ngoding">
+                        <img src="img/HTML - Always Ngoding.jpg" alt="HTML Always Ngoding">
+                    </a>
                 </div>
 
                 <div class="certificate-item" data-category="Always Ngoding">
-                    <img src="img/HTML - Always Ngoding.jpg">
-                </div>
-                <div class="certificate-item" data-category="Always Ngoding">
-                    <img src="img/HTML - Always Ngoding.jpg">
+                    <a href="img/CSS - Always Ngoding.jpg" data-lightbox="Ngoding" data-title="CSS - Always Ngoding">
+                        <img src="img/CSS - Always Ngoding.jpg" alt="CSS Always Ngoding">
+                    </a>
                 </div>
 
+                <!-- REDHAT -->
                 <div class="certificate-item" data-category="RedHat">
-                    <img src="img/RH 104.jpg">
+                    <a href="img/RH 104.jpg" data-lightbox="RedHat" data-title="Red Hat Training: Getting Started with Linux Fundamentals (RH104)">
+                        <img src="img/RH 104.jpg" alt="RedHat RH104">
+                    </a>
                 </div>
+
+                <!-- CCNA -->
                 <div class="certificate-item" data-category="CCNA">
-                    <img src="img/CCNA-Netacad.jpg">
+                    <a href="img/CCNA-Netacad.jpg" data-lightbox="CCNA" data-title="CCNA: Introduction to Networks - Cisco Networking Academy">
+                        <img src="img/CCNA-Netacad.jpg" alt="CCNA Certificate">
+                    </a>
                 </div>
+
+                <!-- EVENTS -->
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/Webinar1.jpg">
+                    <a href="img/Webinar1.jpg" data-lightbox="Events" data-title="Webinar 1">
+                        <img src="img/Webinar1.jpg" alt="Webinar1">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/Webinar2.jpg">
+                    <a href="img/Webinar2.jpg" data-lightbox="Events" data-title="Webinar 2">
+                        <img src="img/Webinar2.jpg" alt="Webinar2">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/IDN - Webinar Syadmin.jpg">
+                    <a href="img/IDN - Webinar Syadmin.jpg" data-lightbox="Events" data-title="IDN Webinar Sysadmin">
+                        <img src="img/IDN - Webinar Syadmin.jpg" alt="IDN Webinar Sysadmin">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/IDN - Webinar Network .jpg">
+                    <a href="img/IDN - Webinar Network .jpg" data-lightbox="Events" data-title="IDN Webinar Network">
+                        <img src="img/IDN - Webinar Network .jpg" alt="IDN Webinar Network">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/IDN - Webinar Cyber Security.jpg">
+                    <a href="img/IDN - Webinar Cyber Security.jpg" data-lightbox="Events" data-title="IDN Webinar Cyber Security">
+                        <img src="img/IDN - Webinar Cyber Security.jpg" alt="IDN Webinar Cyber Security">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/IDN - Bootcamp Network.jpg">
+                    <a href="img/IDN - Bootcamp Network.jpg" data-lightbox="Events" data-title="IDN Bootcamp Network">
+                        <img src="img/IDN - Bootcamp Network.jpg" alt="IDN Bootcamp Network">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/SUHU - Webinar Cyber Security .jpeg">
+                    <a href="img/SUHU - Webinar Cyber Security .jpeg" data-lightbox="Events" data-title="SUHU Webinar Cyber Security">
+                        <img src="img/SUHU - Webinar Cyber Security .jpeg" alt="SUHU Webinar Cyber Security">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/Ngalup Webinar Sysadmin.png">
+                    <a href="img/Ngalup Webinar Sysadmin.png" data-lightbox="Events" data-title="Ngalup Webinar Sysadmin">
+                        <img src="img/Ngalup Webinar Sysadmin.png" alt="Ngalup Webinar Sysadmin">
+                    </a>
                 </div>
+
                 <div class="certificate-item" data-category="Events">
-                    <img src="img/LinkedIn.jpg">
+                    <a href="img/LinkedIn.jpg" data-lightbox="Events" data-title="LinkedIn Learning Certificate">
+                        <img src="img/LinkedIn.jpg" alt="LinkedIn Certificate">
+                    </a>
                 </div>
+
             </div>
         </div>
     </section>
@@ -155,7 +221,11 @@
             </div>
         </div>
     </footer>
+
     <!-- Script -->
     <script src="js/script.js"></script>
+
+    <!-- Lightbox2 JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
