Update webinar titles in certificates.html

--- a/certificates.html
+++ b/certificates.html
@@ -156,14 +156,14 @@
 
                 <!-- EVENTS -->
                 <div class="certificate-item" data-category="Events">
-                    <a href="img/Webinar1.jpg" data-lightbox="Events" data-title="Webinar 1">
-                        <img src="img/Webinar1.jpg" alt="Webinar1">
+                    <a href="img/Webinar1.jpg" data-lightbox="Events" data-title="IDN Webinar Sysadmin">
+                        <img src="img/Webinar1.jpg" alt="IDN Webinar Sysadmin">
                     </a>
                 </div>
 
                 <div class="certificate-item" data-category="Events">
-                    <a href="img/Webinar2.jpg" data-lightbox="Events" data-title="Webinar 2">
-                        <img src="img/Webinar2.jpg" alt="Webinar2">
+                    <a href="img/Webinar2.jpg" data-lightbox="Events" data-title="IDN Webinar Sysadmin">
+                        <img src="img/Webinar2.jpg" alt="IDN Webinar Sysadmin">
                     </a>
                 </div>
 
